test/should-fail/vsgc1776bad1.f3
/**
 * Should-fail test VSGC-1776 : Check for malformed 'run()' function parameters
 *
 * @test/compile-error
 */

function run(arg : String) {
}
